--- a/.env
+++ b/.env
@@ -5,3 +5,8 @@ DB_NAME=email_tracking
 
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=your_hashed_password
+
+IMAP_HOST=imap.example.com
+IMAP_PORT=993
+IMAP_USER=your_email@example.com
+IMAP_PASS=your_email_password
